Fix checkout styles and add icon to product status

--- a/admin/products/index.html
+++ b/admin/products/index.html
@@ -23,7 +23,7 @@
         <div class="upload-form hidden">
             <form action="/ws/upload.php" method="post" enctype="multipart/form-data" target="hiddenFrame">
                 <p class="image-size-text">Image size shall be 256x168</p>
-                <input type="hidden" id="targe_folder" name="target_folder" value="/../assets/images/products/">
+                <input type="hidden" id="target_folder" name="target_folder" value="/../assets/images/products/">
                 <input type="hidden" name="image_file_name" id="image_file_name" value="0">
                 <div class="form-group">
                     Select image to upload:
