--- a/checkout/index.html
+++ b/checkout/index.html
@@ -2,7 +2,6 @@
     <div class="main">
         <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
         <!-- The table area -->
-        <hr>     
         <div class="profile-form">
             <form id="profile-form" class="form-horizontal">
 
@@ -24,20 +23,20 @@
                     <input class="form-control" id="email" type="email" placeholder="Enter your email address">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
-
-                <!-- Password -->
+                <hr>
+                <!-- Name 2-->
                 <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input class="form-control" id="password" type="password" placeholder="Enter your password">
+                    <label for="receiver">Receiver:</label>
+                    <input class="form-control" id="receiver" type="text" placeholder="Enter order receiver's name">
                 </div>
 
                 <!-- Address -->
                 <div class="form-group">
                     <label for="address">Address:</label>
-                    <textarea class="form-control" rows="5" id="address" placeholder="Enter address for delivery"></textarea>
+                    <textarea class="form-control" rows="2" id="address" placeholder="Enter address for delivery"></textarea>
                 </div>
-
                 <!-- Area -->
+
                 <!--
                 <div class="form-group">
                     <label for="area_id">Area:</label>
@@ -46,11 +45,13 @@
                 </div>
                 -->
                 <!-- City -->
+                <!--
                 <div class="form-group">
                     <label for="city_id">City:</label>
                     <select class="form-control selectpicker cities" data-live-search="true" id="city_id" data-size="5" data-header="Choose your city">
                     </select>
                 </div>
+            -->
 
                 <!-- Buttons -->
                 <div class="form-group">
