--- a/checkout/index.html
+++ b/checkout/index.html
@@ -62,8 +62,8 @@
                         <span id="msg"></span>
                     </div>
                     <div>
-                        <button type="reset" class="btn btn-danger btn-lg" id="cancel-action">Go Back</button>
-                        <button type="button" class="btn btn-success btn-lg pull-right" id="submit-form">Submit Info</button>
+                        <button type="reset" class="btn btn-danger btn-lg" id="cancel-action">Back</button>
+                        <button type="button" class="btn btn-success btn-lg pull-right" id="submit-form">Confirm</button>
                     </div>
                 </div>
 
