--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="/img/favicon.ico">
     <title>iyabasira - delivery services</title>
     <!-- Bootstrap core CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link href="/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/libs/bootstrap/css/bootstrap-select.min.css" rel="stylesheet">
     <link href="/css/font-awesome.min.css" rel="stylesheet">
@@ -22,6 +23,7 @@
     <style>
         .alert,
         .error_message,
+        .shadow,
         .table-responsive {
             display: none;
         }
@@ -48,15 +50,21 @@
     <i class="fa fa-refresh fa-5x fa-spin"></i>
     <div class="shadow"></div>
     <div class="container">
+        <div class="pull-right dashboard">
+            <button class="btn btn-danger hidden" id="basket_button" type="button">Basket <span class="badge basket"></span>
+                </button>
+        </div>
         <div id="content" class="content hidden">
         </div>
         <div class="intro" id="intro">
             <img src="/img/fastfood-worker-48-255355.png" class="pull-right">
             <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
             <hr>
-            <p>Buy your meals from your preferred fast food and get it delivered wherever and whenever you want it as easy as 1-2-3:</p>
+            <p>Buy your meals from your preferred fast food and get it delivered as easy as 1-2-3:</p>
             <ul>
-                <li>Select an item from the list and click <buton class="btn btn-xs btn-success">ORDER NOW</buton></li>
+                <li>Select an item from the list and click
+                    <buton class="btn btn-xs btn-success">ORDER NOW</buton>
+                </li>
                 <li>Click on the <button class="btn btn-xs btn-danger">Basket</button> at the top of the page to checkout</li>
                 <li>Choose one of the delivery guys available in the same app</li>
                 <li>Rub your belly, the food is coming</li>
@@ -66,33 +74,13 @@
                 <select class="form-control areas">
                 </select>
             </div>
-            <!--
-            <p>
-            Now click <button type="button" class="btn btn-success btn-lg start" >Start</button>
-            </p>
-            <span class="bottom-message">Delivery service available in <span class="areas"></span> in Port Harcourt Only. Coming soon to other areas.</span>
-            -->
-
-            <hr>
             <p class="copyright">
-            The fast food brands and logos showed here are property of their respective companies.<br/>
-            <span class="iyabasira">iyabasira.online</span> (&copy;) 2017 - All rights reserved.
+                The fast food brands and logos showed here are property of their respective companies.<br/>
+                <span class="iyabasira">iyabasira.online</span> (&copy;) 2017 - All rights reserved.
             </p>
-
         </div>
     </div>
 
-    <footer class="navbar navbar-fixed-bottom">
-        <ul class="nav navbar-nav">
-            <li class="active">
-                <a href="javascript:void(0)"><span class="glyphicon glyphicon-home" data-toggle="tooltip" data-placement="top" title="Home"></span></a>
-            </li>
-            <li>
-                <a href="javascript:void(0)"><span class="glyphicon glyphicon glyphicon-fullscreen" data-toggle="tooltip" data-placement="top" title="Toggle full screen"></span></a>
-            </li>
-        </ul>
-        <img src="/img/comodo_secure_seal_76x26_transp.png" class="pull-right">
-    </footer>
     <!-- Bootstrap core JavaScript ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
 
@@ -104,7 +92,7 @@
 
     <script>
         $(document).ready(function() {
-            if(intro) {
+            if (intro) {
                 $("#content").load(HOME);
                 $(".intro").addClass("hidden");
                 $("#content").removeClass("hidden");
@@ -116,7 +104,7 @@
             }
         });
 
-        $(".areas").on("change", function(e){
+        $(".areas").on("change", function(e) {
             e.preventDefault();
             intro = true;
             setCookie("chosen-area", $(this).val());
@@ -126,13 +114,13 @@
             $("#content").removeClass("hidden");
         });
 
-        $(".glyphicon-home").parent().on("click", function() {
-            document.location = "/";
+        $("#basket_button").on("click", function(e) {
+           e.preventDefault();
+           $(".intro").addClass("hidden");
+           $("#content").removeClass("hidden");
+           $("#content").load("/basket")
         });
 
-        $(".glyphicon-fullscreen").parent().on("click", function() {
-            toggleFullScreen();
-        });
     </script>
 </body>
 
