--- a/map/index.html
+++ b/map/index.html
@@ -19,8 +19,13 @@
                 <span id="msg"></span>
             </div>
             <input type="hidden" id="item_id">
-            <div class="marker-data pull-left"></div>
-            <button type="button" class="btn btn-success btn-md pull-right go-button">Go</button>
+            <button type="button" class="btn btn-lg btn-danger pull-left btn-dismiss">
+                Back
+            </button>
+            <button type="button" class="btn btn-success btn-lg pull-right go-button">
+                Go
+            </button>
+            <div class="marker-data align-center"></div>
         </div>
     </div>
 </div>
@@ -32,6 +37,11 @@
     var markers = [];
     var infowindows = [];
     var zoom = 15;
+
+    $(".btn-dismiss").on("click", function(e) {
+        e.preventDefault();
+        $("#content").load('/shops');
+    });
 
     start = function() {
         $(".alert").hide();
@@ -71,6 +81,11 @@
 
     $('.go-button').on('click', function(e) {
         e.preventDefault();
+        var item_id = $('#item_id').val();
+        if(!item_id) {
+            showErr("Please select a shop")
+            return false;
+        }
         setCookie('shop-area-id', $('#item_id').val());
         $("#content").load(HOME);
     })
