Fix styles and add confirmation to DELETE buttons

--- a/admin/shops_areas/index.html
+++ b/admin/shops_areas/index.html
@@ -16,16 +16,16 @@
             <form id="shops_areas-form" class="form-horizontal">
                 <input type="hidden" name="item_id" id="item_id">
 
-                <!-- shop -->
+                <!-- Shop -->
                 <div class="form-group">
-                    <label for="shop_id">Category:</label>
+                    <label for="shop_id">Shop:</label>
                     <select class="form-control selectpicker shops" id="shop_id">
                     </select>
                 </div>
 
-                <!-- area -->
+                <!-- Area -->
                 <div class="form-group">
-                    <label for="area_id">Category:</label>
+                    <label for="area_id">Area:</label>
                     <select class="form-control selectpicker areas" id="area_id">
                     </select>
                 </div>
@@ -36,9 +36,15 @@
                     <input class="form-control" id="contact" type="text" placeholder="Enter contact name">
                 </div>
 
-                <!-- Name -->
+                <!-- Email -->
                 <div class="form-group">
-                    <label for="name">Mobile:</label>
+                    <label for="email">Email:</label>
+                    <input class="form-control" id="email" type="text" placeholder="Enter email address">
+                </div>
+
+                <!-- Mobile -->
+                <div class="form-group">
+                    <label for="mobile">Mobile:</label>
                     <input class="form-control" id="mobile" type="text" placeholder="Enter mobile number">
                 </div>
 
