--- a/admin/index.html
+++ b/admin/index.html
@@ -1,123 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>iyabasira - Admin</title>
-        <!-- Bootstrap core CSS -->
-        <link href="/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/libs/bootstrap/css/bootstrap-select.min.css" rel="stylesheet">
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <link href="/libs/bootstrap/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="/libs/bootstrap/css/navbar.css" rel="stylesheet">
-        <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-        <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-        <script src="/libs/bootstrap/js/ie-emulation-modes-warning.js"></script>
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>iyabasira - Admin</title>
+    <!-- Bootstrap core CSS -->
+    <link href="/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/libs/bootstrap/css/bootstrap-select.min.css" rel="stylesheet">
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="/libs/bootstrap/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="/libs/bootstrap/css/navbar.css" rel="stylesheet">
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="/libs/bootstrap/js/ie-emulation-modes-warning.js"></script>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-        <link href="/css/admin.min.css" rel="stylesheet">
-        <style type="text/css">
-            @font-face {
-                font-family: 'Roboto';
-                src: url('/fonts/Roboto-Regular.ttf') format('truetype');
-            }
-            body {
-                color: #888;
-                background-color: #fff;
-                font-family: 'Roboto', 'Segoe UI', 'Lucida Grande', 'Ubuntu', sans-serif;
-            }
-            .jumbotron {
-                color: #000;
-            }
-            .main {
-                font-weight: normal;
-                background-color: #fff;
-            }
-        </style>
-    </head>
-    <body>
-        <!-- Loading spin image -->
-        <div class="container-fluid">
-            <i class="fa fa-refresh fa-5x fa-spin"></i>
-            <!-- Static navbar -->
-            <nav class="navbar navbar-default hidden" role="navigation">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    <link href="/css/admin.min.css" rel="stylesheet">
+    <style type="text/css">
+        @font-face {
+            font-family: 'Roboto';
+            src: url('/fonts/Roboto-Regular.ttf') format('truetype');
+        }
+
+        body {
+            color: #888;
+            background-color: #fff;
+            font-family: 'Roboto', 'Segoe UI', 'Lucida Grande', 'Ubuntu', sans-serif;
+        }
+
+        .jumbotron {
+            color: #000;
+        }
+
+        .main {
+            font-weight: normal;
+            background-color: #fff;
+        }
+    </style>
+</head>
+
+<body>
+    <!-- Loading spin image -->
+    <div class="container-fluid">
+        <i class="fa fa-refresh fa-5x fa-spin"></i>
+        <!-- Static navbar -->
+        <nav class="navbar navbar-default hidden" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="javascript:void(0)">Admin</a>
-                    </div>
-                    <div id="navbar" class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav">
-                            <li class="active"><a href="/admin">Home</a></li>
-                            <li><a href="javascript:void(0)" onclick="load('orders')">Orders</a></li>
-                            <li><a href="javascript:void(0)" onclick="load('customers')">Customers</a></li>
-                            <li><a href="javascript:void(0)" onclick="load('map')">Map</a></li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tables <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li role="separator" class="divider"></li>
-                                    <li class="dropdown-header">Products</li>
-                                    <li><a href="javascript:void(0)" onclick="load('categories')">Categories</a></li>
-                                    <li><a href="javascript:void(0)" onclick="load('products')">Products</a></li>
-                                    <li><a href="javascript:void(0)" onclick="load('shop_product')">Shop -> Product</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li class="dropdown-header">Prices</li>
-                                    <li><a href="javascript:void(0)" onclick="load('delivery_rates')">Delivery rates</a></li>
-                                    <li><a href="javascript:void(0)" onclick="load('orders_fees')">Orders fees</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li class="dropdown-header">Entities</li>
-                                    <li><a href="javascript:void(0)" onclick="load('shops')">Shops</a></li>
-                                    <li><a href="javascript:void(0)" onclick="load('shops_areas')">Shops -> Areas</a></li>
-                                    <li><a href="javascript:void(0)" onclick="load('areas')">Areas</a></li>
-                                    <li><a href="javascript:void(0)" onclick="load('cities')">Cities</a></li>
-                                    <li><a href="javascript:void(0)" onclick="load('shop_types')">Shop types</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li class="dropdown-header">Delivery</li>
-                                    <li><a href="javascript:void(0)" onclick="load('deliverers')">Delivery guys</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div><!--/.nav-collapse -->
-                </div><!--/.container-fluid -->
-            </nav>
-            <!-- Main component for a primary marketing message or call to action -->
-            <div class="master-container">
+                    <a class="navbar-brand" href="javascript:void(0)">Admin</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="/admin">Home</a></li>
+                        <li><a href="javascript:void(0)" onclick="load('orders')">Orders</a></li>
+                        <li><a href="javascript:void(0)" onclick="load('customers')">Customers</a></li>
+                        <li><a href="javascript:void(0)" onclick="load('map')">Map</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tables <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-header">Products</li>
+                                <li><a href="javascript:void(0)" onclick="load('categories')">Categories</a></li>
+                                <li><a href="javascript:void(0)" onclick="load('products')">Products</a></li>
+                                <li><a href="javascript:void(0)" onclick="load('shop_product')">Shop -> Product</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-header">Prices</li>
+                                <li><a href="javascript:void(0)" onclick="load('delivery_rates')">Delivery rates</a></li>
+                                <li><a href="javascript:void(0)" onclick="load('orders_fees')">Orders fees</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-header">Entities</li>
+                                <li><a href="javascript:void(0)" onclick="load('shops')">Shops</a></li>
+                                <li><a href="javascript:void(0)" onclick="load('shops_areas')">Shops -> Areas</a></li>
+                                <li><a href="javascript:void(0)" onclick="load('areas')">Areas</a></li>
+                                <li><a href="javascript:void(0)" onclick="load('cities')">Cities</a></li>
+                                <li><a href="javascript:void(0)" onclick="load('shop_types')">Shop types</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-header">Delivery</li>
+                                <li><a href="javascript:void(0)" onclick="load('deliverers')">Delivery guys</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
             </div>
-        </div> <!-- /container -->
-        <!-- Bootstrap core JavaScript
+            <!--/.container-fluid -->
+        </nav>
+        <!-- Main component for a primary marketing message or call to action -->
+        <div class="master-container">
+        </div>
+        <!-- Delete confirmation -->
+        <div class="modal fade" role="dialog" aria-hidden="true" id="delete-confirmation">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header label-primary">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                        <h4 class="modal-title">Are you sure you want to delete this record?</h4>
+                    </div>
+                </div>
+                <div class="modal-body big-font" id="confirm-body"></div>
+                <div class="modal-footer">
+                    <p class="commit-tips">Deleting this record cannot be undone</p>
+                    <button type="button" class="btn btn-danger" id="btnDeleteYes">
+                                Yes
+                            </button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">
+                                No
+                            </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /container -->
+    <!-- Bootstrap core JavaScript
         ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="/libs/jquery/js/jquery.min.js"></script>
-        <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
-        <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="/libs/bootstrap/js/ie10-viewport-bug-workaround.js"></script>
-        <script src="/js/admin.min.js"></script>
-        <script src="/js/maps.min.js"></script>
-        <script>
-            $(document).ready(function() {
-                $(".alert").hide();
-                $('.master-container').load("login");
-            });
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/libs/jquery/js/jquery.min.js"></script>
+    <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="/libs/bootstrap/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/js/admin.min.js"></script>
+    <script src="/js/maps.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $(".alert").hide();
+            $('.master-container').load("login");
+        });
 
-            load = function(folder) {
-                $('.master-container').load(folder)
-            }
-        </script>
-    </body>
+        load = function(folder) {
+            $('.master-container').load(folder)
+        }
+
+        $("#btnDeleteYes").on("click", function(event) {
+            event.preventDefault();
+            commit_details_confirmed();
+        });
+    </script>
+</body>
+
 </html>
