--- a/admin/index.html
+++ b/admin/index.html
@@ -69,6 +69,7 @@
                         <li class="active"><a href="/admin">Home</a></li>
                         <li><a href="javascript:void(0)" onclick="load('orders')">Orders</a></li>
                         <li><a href="javascript:void(0)" onclick="load('customers')">Customers</a></li>
+                        <li><a href="javascript:void(0)" onclick="load('receivers')">Receivers</a></li>
                         <li><a href="javascript:void(0)" onclick="load('map')">Map</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
