--- a/home.html
+++ b/home.html
@@ -3,8 +3,8 @@
         <h3 class="app-title">iyabasira <span class="grey">delivery</span></h3>
         <!-- Search box -->
         <div class="search-box input-group input-group-lg">
-            <input class="form-control" id="search_text" name="search_text" type="text" placeholder="Enter your search" aria-describedby="sizing-addon1">
-            <span class="input-group-addon" id="sizing-addon1"><a href="JavaScript:void(0)" onclick="load_products()"><span class='glyphicon glyphicon-search'></span></a>
+            <input class="form-control" id="search_text" name="search_text" type="search" placeholder="Enter your search" aria-describedby="sizing-addon1">
+            <span class="input-group-addon" id="sizing-addon1"><a href="JavaScript:void(0)" onclick="load_products()"><i class='glyphicon glyphicon-search'></i></a>
             </span>
         </div>
         <!-- The table area -->
