--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link href="/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/libs/bootstrap/css/bootstrap-select.min.css" rel="stylesheet">
+    <link href="/libs/bootstrap/css/bootstrap-switch.css" rel="stylesheet">
     <link href="/css/font-awesome.min.css" rel="stylesheet">
     <!-- Full screen for Safari under iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -25,6 +26,33 @@
         .error_message,
         .shadow,
         .table-responsive {
+            display: none;
+        }
+
+        .bootstrap-select .btn {
+            background-color: #5cb85c;
+            border-style: solid;
+            border-left-width: 5px;
+            border-left-color: #5bc0de;
+            border-top: none;
+            border-bottom: none;
+            border-right: none;
+            color: white;
+            font-weight: 200;
+            padding: 12px 12px;
+            font-size: 16px;
+            margin-bottom: 10px;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+        }
+
+        .bootstrap-select .dropdown-menu {
+            margin: 15px 0 0;
+        }
+
+        select::-ms-expand {
+            /* for IE 11 */
             display: none;
         }
     </style>
@@ -87,6 +115,7 @@
     <script src="/libs/jquery/js/jquery.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
+    <script src="/libs/bootstrap/js/bootstrap-switch.js"></script>
     <script src="/js/global.min.js"></script>
     <script src="/js/maps.min.js"></script>
 
@@ -110,15 +139,17 @@
             setCookie("chosen-area", $(this).val());
             //$("#content").load(HOME);
             $("#content").load('/shops');
+            //$("#content").load("/thanks")
             $(".intro").addClass("hidden");
             $("#content").removeClass("hidden");
+
         });
 
         $("#basket_button").on("click", function(e) {
-           e.preventDefault();
-           $(".intro").addClass("hidden");
-           $("#content").removeClass("hidden");
-           $("#content").load("/basket")
+            e.preventDefault();
+            $(".intro").addClass("hidden");
+            $("#content").removeClass("hidden");
+            $("#content").load("/basket")
         });
 
     </script>
