--- a/admin/index.html
+++ b/admin/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>iyabasira - Admin</title>
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/libs/bootstrap/css/bootstrap-select.min.css" rel="stylesheet">
