Implement status and password for deliverers

--- a/admin/deliverers/index.html
+++ b/admin/deliverers/index.html
@@ -48,16 +48,31 @@
                     <input class="form-control" id="name" type="text" placeholder="Enter area name">
                 </div>
 
-                <!-- Name -->
+                <!-- Mobile -->
                 <div class="form-group">
                     <label for="mobile">Mobile:</label>
                     <input class="form-control" id="mobile" type="text" placeholder="Enter deliverer name">
                 </div>
 
-                <!-- Name -->
+                <!-- Email -->
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input class="form-control" id="email" type="text" placeholder="Enter email">
+                </div>
+
+                <!-- Password -->
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input class="form-control" id="password" type="password" placeholder="Enter password">
+                </div>
+
+                <!-- Status -->
+                <div class="form-group">
+                    <label for="active">Status:</label>
+                    <select class="form-control selectpicker" id="active">
+                        <option value="0">INACTIVE</option>
+                        <option value="1">ACTIVE</option>
+                    </select>
                 </div>
 
                 <!-- Buttons -->
