--- a/admin/shops_areas/index.html
+++ b/admin/shops_areas/index.html
@@ -36,16 +36,25 @@
                     <input class="form-control" id="contact" type="text" placeholder="Enter contact name">
                 </div>
 
+                <!-- Mobile -->
+                <div class="form-group">
+                    <label for="mobile">Mobile:</label>
+                    <input class="form-control" id="mobile" type="text" placeholder="Enter mobile number">
+                </div>
+
                 <!-- Email -->
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input class="form-control" id="email" type="text" placeholder="Enter email address">
                 </div>
 
-                <!-- Mobile -->
+                <!-- Area -->
                 <div class="form-group">
-                    <label for="mobile">Mobile:</label>
-                    <input class="form-control" id="mobile" type="text" placeholder="Enter mobile number">
+                    <label for="email_notify">Notify by email:</label>
+                    <select class="form-control selectpicker" id="email_notify">
+                        <option value="0">NO</option>
+                        <option value="1">YES</option>
+                    </select>
                 </div>
 
                 <!-- Buttons -->
