--- a/index.html
+++ b/index.html
@@ -77,11 +77,17 @@
     <!-- Loading spin image -->
     <i class="fa fa-refresh fa-5x fa-spin"></i>
     <div class="shadow"></div>
+    <div class="alert-area hidden">
+    </div>
     <div class="container">
         <div class="pull-right dashboard">
             <button class="btn btn-danger hidden" id="basket_button" type="button">Basket <span class="badge basket"></span>
                 </button>
         </div>
+        <button class="btn btn-danger pull-left dashboard alerts-button" type="button">
+          <i class="glyphicon glyphicon-envelope"></i> <span class="badge unread-messsages">4</span>
+        </button>
+
         <div id="content" class="content hidden">
         </div>
         <div class="intro" id="intro">
@@ -118,6 +124,7 @@
     <script src="/libs/bootstrap/js/bootstrap-switch.min.js"></script>
     <script src="/js/global.min.js"></script>
     <script src="/js/maps.min.js"></script>
+    <script src="/js/chat.min.js"></script>
 
     <script>
         $(document).ready(function() {
@@ -152,6 +159,15 @@
             $("#content").load("/basket")
         });
 
+        $(".alerts-button").on("click", function(e){
+            e.preventDefault();
+            $(".intro").addClass("hidden");
+            $("#content").removeClass("hidden");
+            location.href = "/chat";
+        })
+
+        log("listCookies", listCookies());
+        //get_alerts();
     </script>
 </body>
 
