--- a/admin/index.html
+++ b/admin/index.html
@@ -72,6 +72,7 @@
                         <li><a href="javascript:void(0)" onclick="load('customers')">Customers</a></li>
                         <li><a href="javascript:void(0)" onclick="load('receivers')">Receivers</a></li>
                         <li><a href="javascript:void(0)" onclick="load('map')">Map</a></li>
+                        <li><a href="javascript:void(0)" onclick="load('chat')">Chat</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
@@ -140,15 +141,22 @@
     <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/libs/bootstrap/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/js/cookies.min.js"></script>
     <script src="/js/admin.min.js"></script>
     <script src="/js/maps.min.js"></script>
     <script>
         $(document).ready(function() {
             $(".alert").hide();
-            $('.master-container').load("login");
+            if (getCookie("login") == 0) {
+                $('.master-container').load("login");
+            } else {
+                $(".navbar").removeClass("hidden");
+            }
+            deleteCookie("sender");
+            deleteCookie("order_id");
         });
 
-        load = function(folder) {
+        var load = function(folder) {
             $('.master-container').load(folder)
         }
 
