--- a/index.html
+++ b/index.html
@@ -122,12 +122,14 @@
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-switch.min.js"></script>
+    <script src="/js/cookies.min.js"></script>
     <script src="/js/global.min.js"></script>
     <script src="/js/maps.min.js"></script>
     <script src="/js/chat.min.js"></script>
 
     <script>
         $(document).ready(function() {
+            setCookie("sender", 2);
             if (intro) {
                 $("#content").load(HOME);
                 $(".intro").addClass("hidden");
