Optimize js code

--- a/chat/index.html
+++ b/chat/index.html
@@ -74,7 +74,9 @@
     </div>
     <script src="/libs/jquery/js/jquery.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/js/common.min.js"></script>
     <script src="/js/cookies.min.js"></script>
+    <script src="/js/ajax.min.js"></script>
     <script src="/js/chat.min.js"></script>
     <script>
         $(document).ready(function() {
