--- a/delivery/index.html
+++ b/delivery/index.html
@@ -46,8 +46,10 @@
     <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/libs/bootstrap/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/js/common.min.js"></script>
     <script src="/js/cookies.min.js"></script>
     <script src="/js/chat.min.js"></script>
+    <script src="/js/ajax.min.js"></script>
     <script src="/js/delivery.min.js"></script>
     <script src="/js/maps.min.js"></script>
     <script>
