--- a/places/index.html
+++ b/places/index.html
@@ -70,6 +70,8 @@
     <script src="/libs/jquery/js/jquery.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
+    <script src="/js/common.min.js"></script>
+    <script src="/js/ajax.min.js"></script>
     <script src="/js/global.min.js"></script>
     <script src="/js/maps.min.js"></script>
 
