--- a/admin/index.html
+++ b/admin/index.html
@@ -142,6 +142,8 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/libs/bootstrap/js/ie10-viewport-bug-workaround.js"></script>
     <script src="/js/cookies.min.js"></script>
+    <script src="/js/common.min.js"></script>
+    <script src="/js/ajax.min.js"></script>
     <script src="/js/admin.min.js"></script>
     <script src="/js/maps.min.js"></script>
     <script>
