--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
     <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-select.min.js"></script>
     <script src="/libs/bootstrap/js/bootstrap-switch.min.js"></script>
+    <script src="/js/common.min.js"></script>
     <script src="/js/cookies.min.js"></script>
+    <script src="/js/ajax.min.js"></script>
     <script src="/js/global.min.js"></script>
     <script src="/js/maps.min.js"></script>
     <script src="/js/chat.min.js"></script>
